// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareConfirmation should render correctly for a carnet ticket 1`] = `
<TwoThirdsLayout
  description="Fare Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/fareConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before sending your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Carnet",
            "href": "fareType",
            "name": "Fare type",
          },
          Object {
            "content": "Single",
            "href": "carnetFareType",
            "name": "Carnet type",
          },
          Object {
            "content": "blobs",
            "href": "selectPassengerType",
            "name": "Passenger type",
          },
          Object {
            "content": "Minimum age: 18 Maximum age: 100",
            "href": "selectPassengerType",
            "name": "Passenger information - age range",
          },
          Object {
            "content": "Membership card",
            "href": "selectPassengerType",
            "name": "Passenger information - proof documents",
          },
          Object {
            "content": "Start time: 0900 End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Thursday",
          },
          Object {
            "content": "Start time: N/A End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Friday",
          },
          Object {
            "content": "Start time: N/A End time: N/A",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Bank holiday",
          },
        ]
      }
      header="Fare Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareConfirmation should render correctly for a ticket with a premade time restriction 1`] = `
<TwoThirdsLayout
  description="Fare Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/fareConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before sending your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Single",
            "href": "fareType",
            "name": "Fare type",
          },
          Object {
            "content": "blobs",
            "href": "selectPassengerType",
            "name": "Passenger type",
          },
          Object {
            "content": "Minimum age: 18 Maximum age: 100",
            "href": "selectPassengerType",
            "name": "Passenger information - age range",
          },
          Object {
            "content": "Membership card",
            "href": "selectPassengerType",
            "name": "Passenger information - proof documents",
          },
          Object {
            "content": "Start time: 0900 End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Thursday",
          },
          Object {
            "content": "Start time: N/A End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Friday",
          },
          Object {
            "content": "Start time: N/A End time: N/A",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Bank holiday",
          },
          Object {
            "content": "Name: Week time restrictions",
            "href": "",
            "name": "Time restriction saved for reuse",
          },
        ]
      }
      header="Fare Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareConfirmation should render correctly for group tickets 1`] = `
<TwoThirdsLayout
  description="Fare Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/fareConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before sending your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Single",
            "href": "fareType",
            "name": "Fare type",
          },
          Object {
            "content": "blobs",
            "href": "selectPassengerType",
            "name": "Passenger type",
          },
          Object {
            "content": "Minimum age: 16 Maximum age: 65",
            "href": "selectPassengerType",
            "name": "blobs - age range",
          },
          Object {
            "content": "N/A",
            "href": "selectPassengerType",
            "name": "blobs - proof documents",
          },
          Object {
            "content": "Minimum age: 0 Maximum age: 16",
            "href": "selectPassengerType",
            "name": "blobs - age range",
          },
          Object {
            "content": "Identity document",
            "href": "selectPassengerType",
            "name": "blobs - proof documents",
          },
          Object {
            "content": "Start time: 0900 End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Thursday",
          },
          Object {
            "content": "Start time: 1400 End time: 2000",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Thursday",
          },
          Object {
            "content": "Start time: N/A End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Friday",
          },
          Object {
            "content": "Start time: N/A End time: N/A",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Bank holiday",
          },
        ]
      }
      header="Fare Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareConfirmation should render correctly for non school single tickets 1`] = `
<TwoThirdsLayout
  description="Fare Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/fareConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before sending your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "Single",
            "href": "fareType",
            "name": "Fare type",
          },
          Object {
            "content": "blobs",
            "href": "selectPassengerType",
            "name": "Passenger type",
          },
          Object {
            "content": "Minimum age: 18 Maximum age: 100",
            "href": "selectPassengerType",
            "name": "Passenger information - age range",
          },
          Object {
            "content": "Membership card",
            "href": "selectPassengerType",
            "name": "Passenger information - proof documents",
          },
          Object {
            "content": "Start time: 0900 End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Thursday",
          },
          Object {
            "content": "Start time: N/A End time: 1600",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Friday",
          },
          Object {
            "content": "Start time: N/A End time: N/A",
            "href": "selectTimeRestrictions",
            "name": "Time restrictions - Bank holiday",
          },
        ]
      }
      header="Fare Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareConfirmation should render correctly for school tickets 1`] = `
<TwoThirdsLayout
  description="Fare Confirmation page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Confirmation - Create Fares Data Service"
>
  <CsrfForm
    action="/api/fareConfirmation"
    csrfToken=""
    method="post"
  >
    <h1
      className="govuk-heading-l"
    >
      Check your answers before sending your fares information
    </h1>
    <ConfirmationTable
      confirmationElements={
        Array [
          Object {
            "content": "School service",
            "href": "fareType",
            "name": "Fare type",
          },
          Object {
            "content": "blobs",
            "href": "selectPassengerType",
            "name": "Passenger type",
          },
          Object {
            "content": "Minimum age: N/A Maximum age: 18",
            "href": "selectPassengerType",
            "name": "Passenger information - age range",
          },
          Object {
            "content": "Student card",
            "href": "selectPassengerType",
            "name": "Passenger information - proof documents",
          },
          Object {
            "content": "Yes",
            "href": "termTime",
            "name": "Only valid during term times",
          },
          Object {
            "content": "Single",
            "href": "",
            "name": "School ticket fare type",
          },
        ]
      }
      header="Fare Information"
    />
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
